--- a/styles/scss/responsive.scss
+++ b/styles/scss/responsive.scss
@@ -12,8 +12,6 @@
 
     &__result__tip-amount,
     &__result__tip-total {
-      padding-bottom: 20px;
-
       &__title {
         h4 {
           font-size: 1.6rem;
